--- a/index.html
+++ b/index.html
@@ -10,26 +10,36 @@
 <body>
     <section>
         <h2>About Me</h2>
-        <p>
-            I am an IT Tech
-        </p>
+            <ul>
+                <p>
+                    Highly motivated and personable information Technology
+                     Technition always ready to help others and gude through 
+                     issues while building upon Amazon's high standards, customer obsession,
+                      and innovation with minimal supervision
+                </p>
+            </ul>
     </section>
     <section>
         <h2>Education</h2>
             <ul>
-                <li>test</li>
-                <li></li>
+                <li>San Jacinto Valley Academy</li>
+                <li>Mount San Jacinto College</li>
             </ul>
     </section>
     <section>
         <h2>Experiance</h2>
-         <ul>
-            <li></li>
-            <li></li>
+          <ul>
+            <li>Associate at Amazon</li>
+            <li>IT Support Associate II at Amazon</li>
           </ul>
     </section>
     <section>
-<h2>Contact Us</h2>
+        <h2>Contact Me</h2>
+        <ul>
+            <li>nsobarnia@yahoo.com</li>
+            <li>Slack:Nathan Sobarnia</li>
+            <li>Phone number </li>
+        </ul>
     </section>
 </body>
 </html>
