added link for email

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 <body>
     <section>
         <h2>About Me</h2>
-            <ul>
                 <p>
                     Highly motivated and personable information Technology
                      Technition always ready to help others and gude through 
                      issues while building upon Amazon's high standards, customer obsession,
                       and innovation with minimal supervision
                 </p>
-            </ul>
     </section>
     <section>
         <h2>Education</h2>
@@ -36,7 +34,7 @@
     <section>
         <h2>Contact Me</h2>
         <ul>
-            <li>nsobarnia@yahoo.com</li>
+            <li><a href="mailto:email">nsobarnia@yahoo.com</a></li>
             <li>Slack:Nathan Sobarnia</li>
             <li>Phone number </li>
         </ul>
